--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "motion": "^11.15.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-fast-marquee": "^1.6.5",
     "react-icons": "^5.4.0",
+    "react-rating-stars-component": "^2.2.0",
     "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^7.1.1",
     "sort-by": "^1.2.0",
