--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-fast-marquee": "^1.6.5",
     "react-helmet-async": "^2.0.5",
     "react-icons": "^5.4.0",
+    "react-parallax": "^3.5.1",
     "react-rating-stars-component": "^2.2.0",
     "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^7.1.1",
