--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-rating-stars-component": "^2.2.0",
     "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^7.1.1",
+    "react-simple-captcha": "^9.3.1",
     "sort-by": "^1.2.0",
     "swiper": "^11.1.15"
   },
